# image-to-ascii

./: .gitignore  Cargo.toml  README.md  build.sh  index.js  package.json
src/: bin.rs  lib.rs
