[package]
name = "image_to_ascii"
version = "0.1.0"
authors = ["Lupo Montero <lupomontero@gmail.com>"]

[dependencies]
wasm-bindgen = "0.2"
image = "*"
clap = "2.26.0"

[lib]
name = "image_to_ascii"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"] # could be `dylib` or `staticlib` as well

[[bin]]
name = "image-to-ascii"
path = "src/bin.rs"
